fixing overflow issue on mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,9 +8,18 @@
   }
 
 :root{
-  overflow-x: hidden;
+  overflow-x: none;
+}
+body {
+  position: relative;
+  box-sizing: border-box;
 }
 
+.wrapper {
+  overflow-x:hidden;
+  overflow:hidden;
+  position: relative;
+}
 h1{
     font-family: customFont;
     font-size: 4.5rem;
@@ -48,6 +57,8 @@ h1{
   from { opacity: 1; }
   to   { opacity: 0; }
 }
+
+
 .texthero{
     color:black;
     text-align: left;
@@ -57,12 +68,20 @@ h1{
     left:15%;
     opacity: 0;
     @media only screen and (max-width: 1022px) {
-        text-align: center;
-        left:0%;
-        top:10%;
-        width: 100%;
-        padding-left:15px;
-        padding-right: 15px;
+      text-align: center;
+      left:0%;
+      top:40%!important;
+      width: 80%;
+      padding-left:15px;
+      padding-right:15px;
+    }
+    @media only screen and (max-width: 600px) {
+      text-align: center;
+      top:10%!important;
+      left:0%;
+      width: 100%;
+      padding-left: 0!important;
+      padding-right: 0!important;
     }
   }
 
@@ -80,29 +99,31 @@ h1{
     }
   }
 
+
+
 section{
   top:-70px;
   bottom: -70px;
   position: relative;
 }
 
+.imgcontainer{
+  width: 100vh;
+  height: 100vh;
+}
 .hero{ 
-  display: inline-block;
   width: 100%;
   height:100vh;
-  overflow: scroll;
   .bgimg{
     /* Position and center the image to scale nicely on all screens */
-    pointer-events: none;
     position: fixed!important;
-    width: 100%;
-    height: 100vh;
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    width:100%;
+    height: 100%;
     z-index: -1;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    align-items: center;
    } 
 }
 
@@ -118,7 +139,6 @@ section{
   height:70px;
   position: -webkit-sticky; /* Safari */
   position: sticky;
-  display:flex;
   top: 0;
   background:#f4e1b2;
   opacity: 0;
@@ -130,6 +150,7 @@ section{
 .navbar.scrolled{
   animation:fadein .5s forwards;
 }
+
 @font-face {
   font-family: customFont;
   src: url("../style/Muli-VariableFont_wght.ttf");
